charts/all/hello-world-amx/templates/hello-world-amx-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world-amx
  namespace: hello-world-amx
  labels:
    application: hello-world-amx
    argocd.argoproj.io/instance: hello-world-amx
spec:
  replicas: 1
  selector:
    matchLabels:
      deploymentconfig: hello-world-amx
  template:
    metadata:
      name: hello-world-amx
      creationTimestamp: null
      labels:
        app: hello-world-amx
        deploymentconfig: hello-world-amx
    spec:
      nodeSelector:
        feature.node.kubernetes.io/cpu-cpuid.AMXBF16: 'true'
      volumes:
        - name: hello-world-amx-configmap
          configMap:
            name: hello-world-amx-configmap
            defaultMode: 438
        - name: dataset
          persistentVolumeClaim:
            claimName: dataset-pvc
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: apache
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: hello-world-amx-configmap
              mountPath: /var/www/html
            - name: dataset
              readOnly: true
              mountPath: /tmp/dataset
          terminationMessagePolicy: File
          image: 'intel/recommendation:tf-spr-dien-inference'
          args:
            - /bin/bash
            - '-c'
            - /bin/bash quickstart/$(SCRIPT); sleep 24h
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
