charts/all/hello-world-amx/templates/hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: hello-world-amx
  name: hello-world-amx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      deploymentconfig: hello-world-amx
  template:
    metadata:
      labels:
        app: hello-world-amx
        deploymentconfig: hello-world-amx
      name: hello-world-amx
    spec:
      containers:
      - name: apache
        image: intel/recommendation:tf-spr-dien-inference
        # image: registry.access.redhat.com/ubi8/httpd-24:1-226
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html
          name: hello-world-amx-configmap
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: hello-world-amx-configmap
        configMap:
          defaultMode: 438
          name: hello-world-amx-configmap
