charts/all/hello-world-amx/templates/hello-world-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world-amx
  name: hello-world-amx
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-world-amx
    weight: 100
  wildcardPolicy: None
